<resources>
    <string name="app_name">Collaboration Check In</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="collaboration_check_in">Collaboration Check in</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="sign_up">Sign up</string>
    <string name="register_now">Register Now</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_no_match">Passwords do not match</string>
    <string name="email_not_verified">Account has not been verified yet</string>
    <string name="invalid_username_password">Username or password do no not match</string>


    <string name="view_groups_activity_title">Your Groups</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_create_group">CreateGroupActivity</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First name</string>
    <string name="title_activity_temp">temp</string>
    <string name="title_activity_view_group">ViewGroupActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_create_meeting">Schedule a meeting</string>
    <string name="title_activity_post_update">Post an update</string>
    <string name="what_s_new">What\'s new?</string>
    <string name="enter_update_title">Enter Update Title</string>
    <string name="publish">publish</string>
    <string name="update_posted">Update posted</string>
    <string name="title_activity_view_groups">ViewGroupsActivity</string>
    <string name="meeting_date">Meeting Date</string>
    <string name="meeting_time">Meeting Time</string>
    <string name="name">Name</string>
    <string name="description_or_agenda_of_meeting">Description or agenda of meeting</string>
    <string name="schedule_meeting">Schedule meeting</string>
    <string name="meeting_location">Meeting Location</string>
    <string name="new_meeting">New Meeting</string>
    <string name="quit_scheduling_meeting">Quit scheduling meeting?</string>
    <string name="remove_meeting_location">Remove Meeting Location</string>
    <string name="change_meeting_location">Change meeting Location</string>
    <string name="by">By:&#032;</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="post_update">Post update</string>
    <string name="assign_task">Assign task</string>
    <string name="upload_file">Upload file</string>
    <string name="title_activity_create_task">Assign a task</string>
    <string name="task_title">Task Title</string>
    <string name="task_due_date">Task Due Date</string>
    <string name="task_description">Task Description</string>
    <string name="assign">Assign</string>

    <string-array name="tester">
        <item>dlamloi2415@gmail.com</item>
        <item>tester@gmail.com</item>
    </string-array>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="upload_file_question">Upload File?</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="file_name">File name</string>
    <string name="select_a_member">Select a member...</string>
    <string name="camera_upload">Camera upload</string>
    <string name="download">Download</string>
    <string name="go_on_say_something">Go on, say something...</string>
    <string name="member_1_email">Member #1 Email</string>
    <string name="member_2_email">Member #2 Email</string>
    <string name="member_3_email">Member #3 Email</string>
    <string name="member_4_email">Member #4 Email</string>
    <string name="member_5_email">Member #5 Email</string>
    <string name="group_name">Group name</string>
    <string name="members">Members</string>
    <string name="input_group_name">Please input a group name</string>
    <string name="input_at_least_one_email">Please input at least one email</string>
    <string name="due">Due: %s</string>
    <string name="task_due_date_heading">Task Due Date: </string>
    <string name="task_description_heading">Task Description:</string>
    <string name="view_task">View Task</string>
    <string name="task_already_complete">Task already complete</string>
    <string name="title_activity_view_meeting">ViewMeetingActivity</string>
    <string name="meeting_date_title">Meeting Date:</string>
    <string name="meeting_time_title">Meeting Time:</string>
    <string name="meeting_location_title">Meeting Location:</string>
    <string name="meeting_agenda">Meeting Agenda:</string>
    <string name="view_meeting">View Meeting</string>
    <string name="quit_creating_group">Quit creating group?</string>
    <string name="quit_posting_update">Quit posting update?</string>
    <string name="quit_assigning_task">Quit assigning task?</string>
    <string name="download_complete">File downloaded to your download folder</string>
    <string name="view_your_groups">View your groups</string>
    <string name="not_assigned_to_task">Sorry, you\'re not assigned to this task</string>
    <string name="enter_file_name">Please enter a file name</string>
    <string name="create_group">Create Group</string>
    <string name="schedule_a_meeting">Schedule a meeting</string>
    <string name="assign_a_task">Assign a Task</string>
    <string name="post_an_update">Post an update</string>
    <string name="enter_email_twice">Sorry, you can\'t enter the same email twice</string>


</resources>
