<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#1C2B4A"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context="com.dlamloi.MAD.login.LoginActivity"
    >

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collaboration_check_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="40sp"
        android:fontFamily="cursive"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        />

    <TextView
        android:id="@+id/login_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_textview"
        android:layout_marginTop="20dp"
        android:textSize="30dp"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        android:textColor="@android:color/white"
        />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title_textview"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#16223B"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="7dp"
            android:layout_marginBottom="15dp"
            >

            <ImageView
                android:id="@+id/username_imageview"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/username_drawable"
                android:tint="#939393"
                android:layout_marginRight="3dp"
                />

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/roboto"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="text|textEmailAddress"
                android:maxLines="1"
                android:nextFocusDown="@id/password_edittext"
                android:textColorHint="#939393"
                android:textSize="20dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#16223B"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="25dp"
            android:paddingLeft="7dp"
            >

            <ImageView
                android:id="@+id/password_imageview"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/password_drawable"
                android:tint="#939393"
                android:layout_marginRight="3dp"
                />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:hint="@string/password"
                android:textColorHint="#939393"
                android:textSize="20dp"
                android:inputType="text|textPassword"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:backgroundTint="@android:color/transparent"
                />


        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_button_enabled"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#D3D3D3"
            android:textSize="20dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_form"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/login_failed_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/error_red"
            android:text="@string/invalid_username_password"
            android:visibility="invisible"
            />

        <ProgressBar
            android:id="@+id/login_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/register_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#16223B"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_alignParentBottom="true"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_yet"

            />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            />


    </LinearLayout>







</RelativeLayout>