<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C2B4A"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.dlamloi.MAD.activity.LoginActivity">

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:text="Collaboration Check in"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/login_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:text="Register"
        android:textColor="@android:color/white"
        android:textSize="30dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title_textview"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                style="@style/Login_Register_LinearLayout_Style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/first_name_edittext"
                    style="@style/Login_Register_EditText_Style"
                    android:hint="@string/first_name"
                    android:imeOptions="actionNext"
                    android:inputType="text|textEmailAddress" />

            </LinearLayout>

            <LinearLayout
                style="@style/Login_Register_LinearLayout_Style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/last_name_edittext"
                    style="@style/Login_Register_EditText_Style"
                    android:hint="@string/last_name"
                    android:imeOptions="actionNext"
                    android:inputType="text|textEmailAddress" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/Login_Register_LinearLayout_Style">

            <EditText
                android:id="@+id/email_edittext"
                style="@style/Login_Register_EditText_Style"
                android:hint="@string/enter_email_address"
                android:imeOptions="actionNext"
                android:inputType="text|textEmailAddress" />


        </LinearLayout>

        <LinearLayout style="@style/Login_Register_LinearLayout_Style">

            <EditText
                android:id="@+id/password_edittext"
                style="@style/Login_Register_EditText_Style"
                android:hint="Enter Password"
                android:imeOptions="actionNext"
                android:inputType="text|textPassword" />

        </LinearLayout>

        <LinearLayout style="@style/Login_Register_LinearLayout_Style">

            <EditText
                android:id="@+id/confirm_password_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/roboto"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="text|textPassword"
                android:maxLines="1"
                android:textColorHint="#939393"
                android:textSize="20dp" />

        </LinearLayout>

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_button_enabled"
            android:text="@string/register_now"
            android:textAllCaps="false"
            android:textColor="#D3D3D3"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/confirm_password_error_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_button"
            android:layout_marginTop="10dp"
            android:text="@string/password_no_match"
            android:textColor="#FF0000"
            android:textStyle="bold"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/register_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>


</RelativeLayout>