<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dlamloi.MAD.groupcreation.CreateGroupActivity"
    tools:showIn="@layout/activity_create_group">


    <ImageView
        android:id="@+id/group_imageview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/group_profile" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/group_name_textinputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group_imageview"
        android:layout_marginTop="10dp"
        android:hint="@string/group_name"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColorHint="@color/edittext_hint_color"
        android:theme="@style/CustomEditTextTheme">

        <EditText
            android:id="@+id/group_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/black"
            android:textColor="@color/black"

            />


    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group_name_textinputlayout"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/members"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/black" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/member_one_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/edittext_hint_color"
                android:theme="@style/CustomEditTextTheme">

                <EditText
                    android:id="@+id/member_one_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:hint="@string/member_1_email"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/edittext_hint_color"
                android:theme="@style/CustomEditTextTheme">

                <EditText
                    android:id="@+id/member_two_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:hint="@string/member_2_email"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"

                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/edittext_hint_color"
                android:theme="@style/CustomEditTextTheme">

                <EditText
                    android:id="@+id/member_three_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:hint="@string/member_3_email"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"

                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/edittext_hint_color"
                android:theme="@style/CustomEditTextTheme">

                <EditText
                    android:id="@+id/member_four_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:hint="@string/member_4_email"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"

                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/edittext_hint_color"
                android:theme="@style/CustomEditTextTheme">

                <EditText
                    android:id="@+id/member_five_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:hint="@string/member_5_email"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"

                    />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
